--- a/templates/base.html
+++ b/templates/base.html
@@ -75,23 +75,12 @@
 
   <footer class="page-footer grey darken-3">
     <div class="container">
-      <div class="row">
-        <div class="col l6 s12">
+        <div class="col l6 s12 center-align">
           <h5 class="white-text">Willmore's Site Setup's</h5>
-          <p class="grey-text text-lighten-4">Anbrian House, Worcester, WR1 1HD</p>
+          <p class="grey-text text-lighten-4">Location: Anbrian House, Worcester, WR1 1HD</p>
+          <p class="grey-text text-lighten-4">Email Us: <a class="white-text" href="mailto:webmaster@willmorecompanies.com">Enquiries@willmorecompanies.com</a></p>
+          <p class="grey-text text-lighten-4">Call Us: +44 (0) 123 456 789</p>
         </div>
-        <div class="col l4 offset-l2 s12">
-          <h5 class="white-text">Social Media</h5>
-          <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Facebook <i class="fab fa-facebook-square"></i></a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Instagram <i class="fab fa-instagram-square"></i></a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">Twitter <i class="fab fa-twitter-square"></i></a></li>
-            <li><a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/luke-willmore" target="_blank">
-                Linkedin
-                <i class="fab fa-linkedin"></i></a></li>
-          </ul>
-        </div>
-      </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
