--- a/templates/profile.html
+++ b/templates/profile.html
@@ -11,11 +11,33 @@
     </div>
 </div>
 
-<div class="row">
-    <h1 class="center-align text-darken-4 red-text"><em><strong>Page under construction</strong></em></h1>
-    <h3 class="center-align text-darken-4">Please visit the home page for a list of all tasks outstanding</h3>
-</div>
-<div class="center-align">
-    <a href="{{ url_for('get_tasks') }}" class="btn blue accent-3 center-align" id="home-button">Home</a>
-</div>
+<!-- tasks for session user -->
+
+<ul class="collapsible popout">
+    {% for task in tasks %}
+    <li>
+        <div class="collapsible-header white-text grey darken-1 text-shadow">
+            <div class="col s3">
+                <i class="fas fa-caret-down"></i>
+                {% if session.user|lower == task.created_by|lower %}
+                    <a href="{{ url_for('delete_task', task_id=task._id) }}" class="btn-small red accent-3">Delete</a>
+                    <a href="{{ url_for('edit_task', task_id=task._id) }}" class="btn-small light-blue accent-4">Edit</a>
+                {% endif %}
+            </div>
+            <div class="col s9">
+                <strong>{{ task.task_name }}</strong> : {{ task.due_date }}
+                {% if task.is_urgent == "on" %}
+                    <i class="fas fa-exclamation-circle"></i>
+                {% endif %}
+            </div>
+        </div>
+        <div class="collapsible-body">
+            <strong>Location : </strong><em>{{ task.site_name }}</em>
+            <p>{{ task.task_description }}</p>
+            <p><em>By: {{ task.created_by }}</em></p>
+        </div>
+    </li>
+    {% endfor %}
+</ul>
+
 {% endblock %}
