--- a/templates/locations.html
+++ b/templates/locations.html
@@ -19,8 +19,8 @@
                         <span class="card-title">{{ locations.site_name}}</span>
                     </div>
                     <div class="card-action">
-                        <a href="{{ url_for('edit_site', site_id=locations._id) }}" class="btn green accent-3">Edit</a>
-                        <a href="{{ url_for('delete_site', site_id=locations._id) }}" class="btn light-blue darken-1">Delete</a>
+                        <a href="{{ url_for('edit_site', site_id=locations._id) }}" class="btn light-blue accent-3">Edit</a>
+                        <a href="{{ url_for('delete_site', site_id=locations._id) }}" class="btn red darken-1">Delete</a>
                     </div>
                 </div>
             </div>
