--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,9 @@
           <li><a href="{{ url_for('get_tasks') }}">Home</a></li>
           <li><a href="{{ url_for('profile', username=session['user']) }}">Profile</a></li>
           <li><a href="{{ url_for('add_task') }}">New Task</a></li>
+          {% if session.user|lower == ("admin"|lower or "lukewillmore"|lower) %}
           <li><a href="{{ url_for('locations') }}">Site Locations</a></li>
+          {% endif %}
           <li><a href="{{ url_for('logout') }}">Log Out</a></li>
           {% else %}
           <li><a href="{{ url_for('login') }}">Log In</a></li>
