--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,7 @@
       <li><a href="{{ url_for('login') }}">Log In</a></li>
       <li><a href="{{ url_for('register') }}">Register</a></li>
       {% endif %}
+      <li><a href="{{ url_for('about') }}">About Us</a></li>
     </ul>
   </header>
 
